Revert "St Alex page: Fix alignment of highest pic"

--- a/css/style.css
+++ b/css/style.css
@@ -208,10 +208,11 @@ a {
 }
 
 .highest-photo {
-    background-color: #fff;
-    padding: 15px;
-	margin: 23px;
-    float: right;
+  background-color: #fff;
+  padding: 15px;
+  position: absolute;
+  right: 135px;
+  top: 290px;
 }
 
 .map-and-crumbs {
@@ -228,14 +229,14 @@ a {
 
 .breadcrumb {
   width: 316px;
-  list-style: none;
-  overflow: hidden;
+  list-style: none; 
+  overflow: hidden; 
   font: 20px Helvetica, Arial, Sans-Serif;
   margin-top: 15px;
   margin-left: 30px;
 }
 
-.breadcrumb a {
+.breadcrumb a { 
   color: #000;
   text-decoration: none;
 }
@@ -596,7 +597,7 @@ input[type=checkbox] ~ .search__geoswitch_on {
   padding: 60px 55px 0px;
   color: #a67322;
   font-size: 30px;
-
+  
 }
 
 .content_p {
